add raw transaction rest codegen + conf
